--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^29.0.0",
-        "@types/node": "^18.7.15",
-        "@types/react": "^18.0.18",
-        "@types/react-dom": "^18.0.6",
+        "bootstrap": "^5.2.0",
         "prettier": "^2.7.1",
         "react": "^18.2.0",
+        "react-bootstrap": "^2.5.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
+        "react-toggle": "^4.1.3",
         "sass": "^1.54.8",
         "typescript": "^4.8.2",
         "web-vitals": "^2.1.4"
@@ -47,6 +46,11 @@
         ]
     },
     "devDependencies": {
+        "@types/jest": "^29.0.0",
+        "@types/node": "^18.7.15",
+        "@types/react": "^18.0.18",
+        "@types/react-dom": "^18.0.6",
+        "@types/react-toggle": "^4.0.3",
         "gh-pages": "^4.0.0"
     }
 }
