--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
         "react-scripts": "5.0.1",
         "react-toggle": "^4.1.3",
         "sass": "^1.54.8",
-        "typescript": "^4.8.2",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
@@ -51,6 +50,7 @@
         "@types/react": "^18.0.18",
         "@types/react-dom": "^18.0.6",
         "@types/react-toggle": "^4.0.3",
-        "gh-pages": "^4.0.0"
+        "gh-pages": "^4.0.0",
+        "typescript": "^4.8.2"
     }
 }
